[package]
name = "yactatt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "~0.11", features = ["json"] }
futures = "~0.3"
tokio = { version = "~1.27", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpi-led-panel = "0.3.0"
