[package]
name = "yactatt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
futures = "~0.3"
reqwest = { version = "~0.11", features = ["json"] }
rpi-led-panel = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "~1.27", features = ["full"] }
